[gd_scene load_steps=11 format=2]

[ext_resource path="res://Sprites/DarkBackground.png" type="Texture" id=1]
[ext_resource path="res://Fonts/BungeeInline-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scripts/StartScreen.gd" type="Script" id=3]
[ext_resource path="res://Sounds/StartMusic (2).wav" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
outline_size = 1
outline_color = Color( 0.184314, 0, 1, 1 )
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=2]
resource_name = "fade_out"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 1.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ProcyonGaming:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Present:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="DynamicFont" id=3]
outline_size = 1
outline_color = Color( 0.184314, 0, 1, 1 )
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=4]
resource_name = "fade_out"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 1.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Present:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("InCautareaLibertatii:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="DynamicFont" id=5]
outline_size = 1
outline_color = Color( 0.184314, 0, 1, 1 )
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=6]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 1 ) ]
}

[node name="StartScreen" type="Node2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.556863, 0, 0, 1 )
position = Vector2( 162.144, 96.217 )
scale = Vector2( 0.239608, 0.316402 )
texture = ExtResource( 1 )

[node name="ProcyonGaming" type="RichTextLabel" parent="."]
margin_right = 320.0
margin_bottom = 180.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "

[center][wave amp=80 freq=2]
Blaze Gaming
Studio"
text = "


Blaze Gaming
Studio"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer1" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="AnimationPlayer1" type="AnimationPlayer" parent="."]
anims/fade_out = SubResource( 2 )

[node name="Present" type="RichTextLabel" parent="."]
visible = false
margin_right = 320.0
margin_bottom = 180.0
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "


[center][wave amp=80 freq=2]
Prezintă"
text = "



Prezintă"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer2" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
anims/fade_out = SubResource( 4 )

[node name="InCautareaLibertatii" type="RichTextLabel" parent="."]
visible = false
margin_right = 320.0
margin_bottom = 180.0
custom_fonts/normal_font = SubResource( 5 )
bbcode_enabled = true
bbcode_text = "


[center][tornado radius=4 freq=2]
În Căutarea
Libertății"
text = "



În Căutarea
Libertății"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer3" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fade_in = SubResource( 6 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -10.0
autoplay = true
[connection signal="timeout" from="Timer1" to="." method="_on_Timer1_timeout"]
[connection signal="animation_finished" from="AnimationPlayer1" to="." method="_on_AnimationPlayer1_animation_finished"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="animation_finished" from="AnimationPlayer2" to="." method="_on_AnimationPlayer2_animation_finished"]
[connection signal="timeout" from="Timer3" to="." method="_on_Timer3_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
